[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["KirillOreshchuk <oreshchuk.kirill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.98.0"
isodate = "^0.6.1"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
